@@ -144,7 +144,7 @@ public class VTNativeUtils
             output.write(WIN32_EJECT_DISC_TRAY_VBS.getBytes());
             output.flush();
             output.close();
-            status = Runtime.getRuntime().exec("cscript " + tmpedtvbsFile.getAbsolutePath()).waitFor();
+            status = Runtime.getRuntime().exec(new String[]{"cscript", tmpedtvbsFile.getAbsolutePath()}).waitFor();
           }
           catch (Throwable e)
           {
@@ -189,7 +189,7 @@ public class VTNativeUtils
           output.write(WIN32_EJECT_DISC_TRAY_VBS.getBytes());
           output.flush();
           output.close();
-          status = Runtime.getRuntime().exec("cscript " + tmpedtvbsFile.getAbsolutePath()).waitFor();
+          status = Runtime.getRuntime().exec(new String[]{"cscript", tmpedtvbsFile.getAbsolutePath()}).waitFor();
         }
         catch (Throwable e)
         {
@@ -238,7 +238,7 @@ public class VTNativeUtils
             output.write(WIN32_EJECT_DISC_TRAY_VBS.getBytes());
             output.flush();
             output.close();
-            status = Runtime.getRuntime().exec("cscript " + tmpedtvbsFile.getAbsolutePath()).waitFor();
+            status = Runtime.getRuntime().exec(new String[]{"cscript", tmpedtvbsFile.getAbsolutePath()}).waitFor();
           }
           catch (Throwable e)
           {
@@ -283,7 +283,7 @@ public class VTNativeUtils
           output.write(WIN32_EJECT_DISC_TRAY_VBS.getBytes());
           output.flush();
           output.close();
-          status = Runtime.getRuntime().exec("cscript " + tmpedtvbsFile.getAbsolutePath()).waitFor();
+          status = Runtime.getRuntime().exec(new String[]{"cscript", tmpedtvbsFile.getAbsolutePath()}).waitFor();
         }
         catch (Throwable e)
         {
